--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
-;
+:root  {
+        --background-a: #536976;
+        --background-b: #292e49;
+        --text-color: white;
+  }
+
+
+body  {
+        color: var(--text-color);
+        background: #536976;
+        background: -webkit-linear-gradient(to left top, var(--background-a), var(--background-b));
+        background: linear-gradient(to left top, var(--background-a), var(--background-b));
+        background-attachment: fixed;
+        font-family: "Montserrat", sans-serif;
+        width: 80%;
+        margin: 0 auto;
+}
+header {
+        margin-top: 62px;
+        position: absolute;
+        float: left;
+        font-size: 24px;
+        font-weight: bold;
+}
+nav {
+        margin-top: 70px;
+        float: right;
+        color: var(--text-color);
+        font-size: 16px;
+        letter-spacing: 2px;
+}
+nav ul {
+        list-style: none;
+        margin: 0;
+        margin: 0;
+}
+nav li {
+        display: inline;
+        float: left;
+}
+nav li a {
+        text-decoration: none;
+        margin: 0px 10px 0px 10px;
+        color: var(--text-color);
+}
+nav li a:hover {
+        color: #88a0ad;
+        transition: 0.3s;
+}
+section {
+        padding-top: 15%;
+        margin: 0 auto;
+        text-align: center;
+}
+section p {
+        text-align: center;
+        margin: 10px 0 10px 0;
+        font-size: 16px;
+        max-width: 325px;
+        margin: 0 auto 25px auto;
+}
+section img.icon {
+        height: 100px;
+        border-radius: 50px;
+        margin-bottom: 30px;
+}
+a {
+        color: #88a0ad;
+        text-decoration: none;
+}
+a.button {
+        padding: 5px 10px;
+        border-radius: 15px;
+        border: 1px solid #88a0ad;
+        height: 10px;
+        transition: 0.3s;
+}
+a.button:hover {
+        color: var(--text-color);
+        background: #88a0ad;
+}
+h1 {
+        font-size: 50px;
+        margin: 10px 0;
+}
+h2 {
+        font-size: 16px;
+        margin: 0;
+}
+footer {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        font-size: 11px;
+        margin: 7px;
+}
